tests/compile-fail/semck/call-const.rs
const NAME: int = 0;

fn main() {
    NAME();  //! ERROR(4:5): cannot call non-function
}